--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,8 @@ jobs:
 
     - name: Run playit.gg
       run: |
-        Start-Process -FilePath "C:\Program Files\playit_gg\bin\playit.exe" -NoNewWindow
+        Start-Process -FilePath "C:\Program Files\playit_gg\bin\playit.exe" -ArgumentList ">", "$env:USERPROFILE\playit.log" -NoNewWindow -Wait
+    
+    - name: Display playit.gg log
+      run: |
+        Get-Content "$env:USERPROFILE\playit.log"
