--- a/.github/workflows/kristal.yml
+++ b/.github/workflows/kristal.yml
@@ -18,30 +18,21 @@ jobs:
         Invoke-WebRequest -Uri "https://download.teamviewer.com/download/TeamViewer_Setup.exe" -OutFile "$env:USERPROFILE\Downloads\TeamViewer_Setup.exe"
         Start-Process -FilePath "$env:USERPROFILE\Downloads\TeamViewer_Setup.exe" -ArgumentList "/S" -NoNewWindow -Wait
 
-    - name: Set TeamViewer Password
+     - name: Get TeamViewer ID
       run: |
         $teamviewerPath = "C:\Program Files (x86)\TeamViewer\TeamViewer.exe"
         if (-Not (Test-Path $teamviewerPath)) {
           $teamviewerPath = "C:\Program Files\TeamViewer\TeamViewer.exe"
         }
         if (Test-Path $teamviewerPath) {
-          & "$teamviewerPath" --Password "YourSecurePassword"
-        } else {
-          Write-Output "TeamViewer is not installed."
-          exit 1
-        }
-
-    - name: Get TeamViewer ID
-      run: |
-        $teamviewerPath = "C:\Program Files (x86)\TeamViewer\TeamViewer.exe"
-        if (-Not (Test-Path $teamviewerPath)) {
-          $teamviewerPath = "C:\Program Files\TeamViewer\TeamViewer.exe"
-        }
-        if (Test-Path $teamviewerPath) {
-          $id = & "$teamviewerPath" --info | Select-String -Pattern "Your ID" | ForEach-Object { $_.Line.Split(':')[1].Trim() }
+          Start-Process -FilePath $teamviewerPath -ArgumentList "-info" -NoNewWindow -PassThru | Out-File -FilePath "$env:USERPROFILE\teamviewer_info.log"
+          $id = Get-Content "$env:USERPROFILE\teamviewer_info.log" | Select-String -Pattern "Your ID" | ForEach-Object { $_.Line.Split(':')[1].Trim() }
           Write-Output "TeamViewer ID: $id"
           Write-Output "TeamViewer Password: YourSecurePassword"
         } else {
           Write-Output "TeamViewer is not installed."
           exit 1
-        }
+
+    - name: Display TeamViewer Log
+      run: |
+        Get-Content "$env:USERPROFILE\teamviewer_info.log"
