--- a/.github/workflows/kristal.yml
+++ b/.github/workflows/kristal.yml
@@ -24,7 +24,15 @@ jobs:
         }
         if (Test-Path $teamviewerPath) {
           & "$teamviewerPath" --Password "YourSecurePassword"
-        } else {
+        }
+        
+    - name: Verify TeamViewer Installation
+      run: |
+        $teamviewerPath = "C:\Program Files (x86)\TeamViewer\TeamViewer.exe"
+        if (-Not (Test-Path $teamviewerPath)) {
+          $teamviewerPath = "C:\Program Files\TeamViewer\TeamViewer.exe"
+        }
+        if (-Not (Test-Path $teamviewerPath)) {
           Write-Output "TeamViewer is not installed."
           exit 1
         }
@@ -35,17 +43,12 @@ jobs:
         if (-Not (Test-Path $teamviewerPath)) {
           $teamviewerPath = "C:\Program Files\TeamViewer\TeamViewer.exe"
         }
-        if (Test-Path $teamviewerPath) {
-          Start-Process -FilePath $teamviewerPath -ArgumentList "--info" -NoNewWindow -Wait -PassThru
-          Start-Sleep -Seconds 10
-          $logFile = "$env:ProgramData\TeamViewer\TeamViewer14_Logfile.log"
-          $id = Get-Content $logFile | Select-String -Pattern "Your ID" | ForEach-Object { $_.Line.Split(':')[1].Trim() }
-          Write-Output "TeamViewer ID: $id"
-          Write-Output "TeamViewer Password: YourSecurePassword"
-        } else {
-          Write-Output "TeamViewer is not installed."
-          exit 1
-        }
+        Start-Process -FilePath $teamviewerPath -ArgumentList "--info" -NoNewWindow -Wait -PassThru
+        Start-Sleep -Seconds 10
+        $logFile = "$env:ProgramData\TeamViewer\TeamViewer14_Logfile.log"
+        $id = Get-Content $logFile | Select-String -Pattern "Your ID" | ForEach-Object { $_.Line.Split(':')[1].Trim() }
+        Write-Output "TeamViewer ID: $id"
+        Write-Output "TeamViewer Password: YourSecurePassword"
 
     - name: Display TeamViewer Log
       run: |
